test/sema/typeck/trait/super-trait-cycle.out
error: cycle in type hierarchy detected.
--> super-trait-cycle.dora:2:10
 | trait A: B {}
 | trait B: A {}
            ~
 | 
1 error found.
