test/sema/typeck/trait/super-trait-cycle.dora
trait A: B {}
trait B: A {}
